# Python-programming-game

./: .gitignore  App.py  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyroma.txt
src/game/: App.py  Game.py  MainMenu.py  Menu.py  Player.py  SceneManager.py  app.py  character.py  game.py  gun.py  level.py  main_menu.py  player.py  pylint.txt  scene_manager.py  victory.py
src/game/assets/character/: credit.txt  m16-smaller.aseprite  m16.aseprite  pistol.aseprite
src/game/assets/gravity_pixel_font/: credit.txt
src/game/assets/tiles/: credit.txt
src/python_programming_game.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: test_character.py  test_gun.py
